@@ -1755,6 +1755,9 @@ static const LuaWrapper::FunctionReg dfhack_items_module[] = {
     WRAPM(Items, getItemBaseValue),
     WRAPM(Items, getValue),
     WRAPM(Items, createItem),
+    WRAPM(Items, checkMandates),
+    WRAPM(Items, canTrade),
+    WRAPM(Items, canTradeWithContents),
     WRAPN(moveToGround, items_moveToGround),
     WRAPN(moveToContainer, items_moveToContainer),
     WRAPN(moveToInventory, items_moveToInventory),
