@@ -182,6 +182,14 @@ DFHACK_EXPORT int getItemBaseValue(int16_t item_type, int16_t item_subtype, int1
 DFHACK_EXPORT int getValue(df::item *item);
 
 DFHACK_EXPORT int32_t createItem(df::item_type type, int16_t item_subtype, int16_t mat_type, int32_t mat_index, df::unit* creator);
+
+/// Returns true if the item is free from mandates, or false if mandates prevent trading the item
+DFHACK_EXPORT bool checkMandates(df::item *item);
+/// Checks whether the item can be traded
+DFHACK_EXPORT bool canTrade(df::item *item);
+/// Checks whether the item and all items it contains, if any, can be traded
+DFHACK_EXPORT bool canTradeWithContents(df::item *item);
+
 }
 }
 
